# XAI_TS_Tool

./: .gitignore  pyproject.toml  server_fastapi.py
Utils/: load_data.py
pythonServer/: classifyTimeSeries.py  getTimeSeries.py
webPage/src/: App.js  HomePage.css  ImportPage.css  ImportPage.jsx  TrainSetting.jsx
