[project]
name = "xai-ts-tool"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "3.11.13"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "rdp (==0.8)",
    "simplification (==0.7.12)",
    "sympy (==1.13.3)",
    "triton (==3.4.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "kneed (>=0.8.5,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
